--- a/css/tablas.css
+++ b/css/tablas.css
@@ -91,9 +91,7 @@ table {
 
 
 #divTablaProteina button,
-#divTabla button[name="registrarse"]
-
-{
+#divTabla button[name="registrarse"]{
     /*margin-top: 5%; */
     background-color: #b8d0e3;
     border-radius: 4px;
@@ -480,7 +478,7 @@ table tr:nth-child(odd){
     background-color: #35a631;
     color: white;
     padding: 10px;
-    height: 100%;
+    /* height: 100%; */
     margin-right: 2px;
     width: 100%;
     border: none;
@@ -491,7 +489,7 @@ table tr:nth-child(odd){
 
 .eliminar{/*para tabla => boton de usuario*/
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     background-color: #ae3636;
     color: white;
     padding: 10px;
@@ -501,13 +499,22 @@ table tr:nth-child(odd){
 
 }
 
-.modificar:hover,
-.eliminar:hover{
+/* HOVER PARA BOTON DE MODIFICAR Y ELIMINAR DE TABLA PROTEINA */
+#divTablaProteina .eliminar:hover,
+#divTablaProteina .modificar:hover
+{
+    background-color:#5c8db4;
+    scale: 1.05;
+}
+
+/* HOVER BOTONES DE MODIFI Y ELIMINAR DE USUARIO Y MEDICAMENTOS */
+#divTabla .modificar:hover,
+#divTabla .eliminar:hover{
     scale: 1.05;
 }
 
 
-.modificar-med{ /*para tabla => boton de usuario*/
+.modificar-med{ /*para tabla => boton de MEDICAMENTO*/
     background-color: #35a631;
     color: white;
     padding: 26px;
@@ -520,7 +527,7 @@ table tr:nth-child(odd){
 
 }
 
-.eliminar-med{/*para tabla => boton de usuario*/
+.eliminar-med{/*para tabla => boton de MEDICAMENTO*/
     width: 100%;
     height: 100%;
     background-color: #ae3636;
@@ -531,8 +538,8 @@ table tr:nth-child(odd){
 
 }
 
-
-.modificar-prot{ /*para tabla => boton de usuario*/
+/* 
+ .modificar-prot{ 
     background-color: #1f469d;
     color: white;
     padding: 13px;
@@ -545,7 +552,7 @@ table tr:nth-child(odd){
 
 }
 
-.eliminar-prot{/*para tabla => boton de usuario*/
+.eliminar-prot{
     width: 100%;
     height: 100%;
     background-color: #ae3636;
@@ -554,7 +561,7 @@ table tr:nth-child(odd){
     border: none;
     transition: .3s;
 
-}
+}  */
 
 
 #divTabla table td:last-child{
@@ -572,24 +579,30 @@ table tr:nth-child(odd){
     #tablaModificar td input{
         width: 100%;
         border: none;
-        padding: 4px;
+        padding: 5px ;
         text-align: center;
+        background-color: #5ebebb;
     }
 
     #tablaModificar td input[type='submit']{
-        background-color: #fff;
+        color: #fff;
         cursor: pointer;
         transition: .3s;
+        border-radius: 4px;
+        background-color:#439A97;
+        padding: 6px;
 
     }
     #tablaModificar td input[type='submit']:hover{
-        scale: 1.05;
+        scale: 1.09;
     }
 
-  
+   
 
 
 /*AQUI TERMINA  LOS BOTONES DE MODIFICAR Y ACTUALIZAR DE LAS TABLAS CUANDO EL USER SE LOGEA COMO ADMINISTRADOR */
+
+
 
 
 /* RESPONSIVE TABLA DE MEDICAMENTOS */
@@ -703,9 +716,13 @@ table tr:nth-child(odd){
 
 
     }
-
-    @media screen and (max-width:1200px){
+    /* ESTA ES LA TABLA DE MODIFICAR YA SEA USUARIO O MEDICAMENTOS */
+    @media screen and (max-width:1000px){
         
+        #tablaModificar{
+            width: 100%;
+        }
+
         #tablaModificar thead{
             display: none;
         }
@@ -738,12 +755,12 @@ table tr:nth-child(odd){
 
      @media screen and (max-width:1210px){
         
-        #divTabla table td,
+        /* #divTabla table td,
         #divTabla table th,
         #divTabla table td button
          {
-            /* font-size: 1vw; */
-        }
+            font-size: 1vw;
+        } */
 
        
     }
@@ -803,8 +820,15 @@ table tr:nth-child(odd){
             width: 100%;
         }
 
+        #compEliminarUsuario{
+            /* width: none; */
+            width: 100%;
+
+        }
+
 
     }
+
 
 
     /* @media screen and (max-width:700px){
@@ -825,11 +849,37 @@ table tr:nth-child(odd){
 
 
 
-    /*Formulario para elimar usuario de las tablas*/
+    /*ESTILO PARA EL Formulario para elimiar usuario,nedicamento,proteina de las tablas*/
     #compEliminarUsuario{
         display: none;
-    }
+        max-width: 440px;
+        /* background: red; */
+        border: 1px solid black;
+        border-radius: 7px;
+        padding: 14px;
     
+    }
+   
+    #compEliminarUsuario input[type='submit'] {
+        padding: 7px;
+        background-color: #439A97;
+        border: none;
+        color: white;
+        border-radius: 4px;
+        margin-top: 23px;
+        transition: .3s;
+        cursor: pointer;
+    }
+
+    #divTablaProteina #compEliminarUsuario input[type='submit']{
+        background-color: red;
+    }
+
+    #compEliminarUsuario input[type='submit']:hover{
+        scale: 1.05;
+    }
+
+    /* AQUI TERMINA ESTILO DEL PEQUEÑO FORMULARO DE ELIMINAR USUARIO */
 /*
   @media screen  and (max-width:922px){
     #divTablaProteina{
