--- a/css/header.css
+++ b/css/header.css
@@ -245,6 +245,8 @@ header button{
     width: 13.8%;
     z-index: 20;
     background-color: #47B191;
+    margin-top: 120px; 
+
 }
 /*MENU DESPLEGABLE DE MEDICAMENTOS*/
 /*contenedor del menu desplegable*/
