--- a/css/headerBlue.css
+++ b/css/headerBlue.css
@@ -246,6 +246,7 @@ header button{
     z-index: 20;
     background-color: #79B4E3;
     padding: 10px;
+    margin-top: 120px; 
 }
 /*MENU DESPLEGABLE DE MEDICAMENTOS*/
 /*contenedor del menu desplegable*/
