--- a/css/headerPink.css
+++ b/css/headerPink.css
@@ -245,6 +245,8 @@ header button{
     z-index: 20;
     background-color: #F18D8C;
     padding: 10px;
+    margin-top:120px;
+
     /* text-align: center;*/
 }
 /*MENU DESPLEGABLE DE MEDICAMENTOS*/
